hphp/hack/test/typecheck/constraints/where_override_bad.php.like_types.exp
File "where_override_bad.php", line 25, characters 7-9:
A 'where' type constraint is violated here (Typing[4323])
File "where_override_bad.php", line 10, characters 19-21:
This is the method with 'where' type constraints
File "where_override_bad.php", line 10, characters 45-48:
Expected Base
File "where_override_bad.php", line 24, characters 25-28:
But got dynamic because it is an unenforceable type
File "where_override_bad.php", line 16, characters 19-21:
Member foo has the wrong type (Typing[4341])
File "where_override_bad.php", line 16, characters 45-51:
Expected Derived
File "where_override_bad.php", line 15, characters 13-13:
But got T
File "where_override_bad.php", line 16, characters 40-40:
  via this generic T
